World surface shader visible when world volume shader is applied #40695

Closed
opened 2014-06-18 21:59:12 +02:00 by Michael Schiemer · 8 comments

System Information
Windows 64 Nvidia GTX 580

Blender Version
Broken: 2.70a f93bc76

Short description of error
When using an area lamp in cycles in conjunction with a world volume shader the world surface shader gets visible.
(Sometimes the visibility of the surface shader switches while zooming in and out or while changing the perspective.)

Exact steps for others to reproduce the error
Just activate the viewport render mode.arealamp_bug.blend

**System Information** Windows 64 Nvidia GTX 580 **Blender Version** Broken: 2.70a f93bc76 **Short description of error** When using an area lamp in cycles in conjunction with a world volume shader the world surface shader gets visible. (Sometimes the visibility of the surface shader switches while zooming in and out or while changing the perspective.) **Exact steps for others to reproduce the error** Just activate the viewport render mode.[arealamp_bug.blend](https://archive.blender.org/developer/F94687/arealamp_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Thomas Dinges was assigned by Michael Schiemer 2014-06-18 21:59:12 +02:00

Added subscriber: @givingsights

Added subscriber: @givingsights

Just a quick note: Bug only shows if homogeneous is checked for the world volume and in the volume sampling "Equi-angular" is set.

Just a quick note: Bug only shows if homogeneous is checked for the world volume and in the volume sampling "Equi-angular" is set.
Thomas Dinges removed their assignment 2014-06-19 19:00:44 +02:00
Brecht Van Lommel was assigned by Thomas Dinges 2014-06-19 19:00:44 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Brecht, could you please take a look?

Brecht, could you please take a look?

This issue was referenced by 4b209f063c

This issue was referenced by 4b209f063cf384f05a9a02d4ac64e90c0ba14e73

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4b209f063c.

Closed by commit 4b209f063c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40695
No description provided.