Fix T40695: world surface shader incorrectly visible with world volume.